--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,3 +20,5 @@ jobs:
     # Runs a single command using the runners shell
     - name: Send greeting
       run: echo "Hello"
+    - name: test commands
+      run: ls;pwd;whoami;curl https://ifconfig.me/
